# Endokelp_Projects

./: Personal Website  README.md  UltimateEven_Odd.java  snake_game.py
.cursor/: hooks.json  pre-push.md
.cursor/hooks/: git-push-gate.js
.githooks/: pre-push
EndokelpWebsite/: README.md  index.html  tailwind.config.js
ProfessionalPersonalWebsiteTemplate/: README.md  index.html  package.json
ProfessionalPersonalWebsiteTemplate/src/: App.tsx  index.css
PythonProjects/fire-ice-write/: .gitignore  ATTRIBUTION.md  README.md  main.py  requirements.txt
PythonProjects/momentum-backtest/: .gitignore  README.md  pyproject.toml
PythonProjects/momentum-backtest/src/momentum_backtest/: __init__.py  __main__.py  analytics.py  backtest.py  config.py  data.py  portfolio.py  signal.py
PythonProjects/momentum-backtest/tests/: conftest.py  test_analytics.py  test_backtest.py  test_portfolio.py  test_signal.py
PythonProjects/overfit-aware-signals/: .gitignore  PHASE-STATE.md  README.md  pyproject.toml
PythonProjects/overfit-aware-signals/showcase/: LINKEDIN_POST.md  onepager.typ
PythonProjects/overfit-aware-signals/src/overfit_aware_signals/: __init__.py  analytics.py  backtest.py  cli.py  config.py  cpcv.py  cv.py  data.py  pbo.py  plotting.py  portfolio.py  research.py  signals.py  stats.py
PythonProjects/overfit-aware-signals/tests/: conftest.py  test_analytics.py  test_backtest.py  test_cpcv.py  test_cv.py  test_data.py  test_pbo.py  test_plotting.py  test_portfolio.py  test_research.py  test_signals.py  test_stats.py
PythonProjects/portfolio_mpt/: .gitignore  Dissertation_Full_Data.xlsx  IA_Portfolio_Data.xlsx  README.md  analyze_bench_press.py  calculate_ia_data.py  check_word_count.py  dissertation_analysis.py  dissertation_backtest_metrics.csv  dissertation_data_loader.py  draft_content.txt  draft_text.txt  expand_high_quality_ia.py  generate_bench_press_ia.py  generate_final_ia.py  generate_full_dissertation.py  generate_research_paper.py  monte_carlo_sim.py  mpt_frontier.py  opt_results.txt  (+6 more)
PythonProjects/volatility-targeting/: .gitignore  README.md  pyproject.toml  requirements.txt
PythonProjects/volatility-targeting/examples/: quickstart.py
PythonProjects/volatility-targeting/src/volatility_targeting/: __init__.py  __main__.py  cli.py  data.py  diagnostics.py  plotting.py  targeting.py  vol.py
PythonProjects/volatility-targeting/tests/: test_data.py  test_diagnostics.py  test_targeting.py  test_vol.py
PythonProjects/volatility-targeting/tests/fixtures/: tiny_returns.csv
hypnos-edge/: PHASE-STATE.md
hypnos-edge/analysis/: pyproject.toml
hypnos-edge/analysis/src/hypnos_edge/: __init__.py  __main__.py  engine.py  hrv.py  policy.py  synth.py
hypnos-edge/analysis/tests/: conftest.py  test_engine.py  test_hrv.py  test_policy.py  test_synth.py
robotics java projects/: AutonomousNavigation.java  PIDController.java  README.md  RobotArmKinematics.java  RobotCommunication.java  SensorFusion.java  VisionProcessing.java
(+34 files in other folders)
